Fixed layout issues with file view and settings.

--- a/Artivity.Apid.Modules.Journal/app/css/style.scss
+++ b/Artivity.Apid.Modules.Journal/app/css/style.scss
@@ -697,7 +697,7 @@ h4 {
 }
 
 .ui-pane-container {
-    display: table;
+    display: table !important;
 }
 
 .ui-pane {
